# moon

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  Moonlight.sln  README.moon  TODO.moon
src/: Bindings.cs
src/managed/: .gitignore  ChangeLog  Consts.cs  Initializer.cs  Makefile.am  MarshalEx.cs  Moonlight.csproj  RuntimeManagedCallbacks.cs  Themes.Designer.cs  Themes.resx
src/runtime/: .gitignore  CMakeLists.txt  ChangeLog  alpha-premul-table.inc  animation.cpp  animation.h  application.cpp  application.h  applier.cpp  applier.h  asxparser.cpp  asxparser.h  audio-alsa.cpp  audio-alsa.h  audio-opensles.cpp  audio-opensles.h  audio-pulse.cpp  audio-pulse.h  audio.cpp  audio.h  authors.h  bitmapcache.cpp  bitmapcache.h  bitmapimage.cpp  bitmapimage.h  bitmapsource.cpp  bitmapsource.h  border.cpp  border.h  brush.cpp  brush.h  canvas.cpp  canvas.h  capture.cpp  capture.h  clock.cpp  clock.h  collection.cpp  collection.h  color.cpp  (+253 more)
src/runtime/pal/: pal-threads-pthreads.cpp  pal-threads.h  pal.cpp  pal.h  window.cpp  window.h
src/runtime/pal/android/: android_native_app_glue.h  clipboard-android.cpp  clipboard-android.h  fonts-android.cpp  im-android.cpp  im-android.h  pal-android.cpp  pal-android.h  pixbuf-android.cpp  pixbuf-android.h  window-android.cpp  window-android.h
src/runtime/pal/capture/: pal-linux-audio-capture.cpp  pal-linux-audio-capture.h  pal-linux-capture.cpp  pal-linux-capture.h
src/runtime/pal/capture/v4l2/: pal-v4l2-video-capture.cpp  pal-v4l2-video-capture.h
src/runtime/pal/cocoa/: MLEvent.h  MLEvent.m  MLTimerContext.h  MLTimerContext.m  MLView.h  MLView.m  MLWindow.h  MLWindow.m  clipboard-cocoa.h  clipboard-cocoa.m  config-dialog-cocoa.h  config-dialog-cocoa.m  debug-ui-cocoa.h  debug-ui-cocoa.m  fonts-cocoa.cpp  im-cocoa.h  im-cocoa.m  install-dialog-cocoa.h  install-dialog-cocoa.m  pal-cocoa.h  pal-cocoa.m  pixbuf-cocoa.h  pixbuf-cocoa.m  window-cocoa.h  window-cocoa.m  windowless-cocoa.h  windowless-cocoa.m
src/runtime/pal/fonts/fontconfig/: pal-fontconfig.cpp  pal-fontconfig.h
src/runtime/pal/gtk/: clipboard-gtk.cpp  clipboard-gtk.h  config-dialog-gtk.cpp  config-dialog-gtk.h  debug-ui-gtk.cpp  debug-ui-gtk.h  im-gtk.cpp  im-gtk.h  install-dialog-gtk.cpp  install-dialog-gtk.h  nocodec-ui-gtk.cpp  nocodec-ui-gtk.h  pal-gtk.cpp  pal-gtk.h  pixbuf-gtk.cpp  pixbuf-gtk.h  window-gtk.cpp  window-gtk.h  windowless-gtk.cpp  windowless-gtk.h
src/runtime/pal/messaging/glib/: pal-glib-msg.cpp  pal-glib-msg.h
src/runtime/pal/network/: pal-linux-network.cpp  pal-linux-network.h
src/runtime/pal/network/dbus/: pal-dbus-network.cpp  pal-dbus-network.h
src/runtime/pal/sdl/: clipboard-sdl2.cpp  clipboard-sdl2.h  config.h  fonts-sdl2.cpp  fonts-sdl2.h  im-sdl2.cpp  im-sdl2.h  installer-sdl2.cpp  installer-sdl2.h  pal-sdl2.cpp  pal-sdl2.h  pixbuf-sdl2.cpp  pixbuf-sdl2.h  threads-sdl2.cpp  unistd.h  window-sdl2.cpp  window-sdl2.h
src/runtime/pal/sdl/events/: button-sdl2.h  key-sdl2.h  motion-sdl2.h  wheel-sdl2.h
src/runtime/pal/sdl/gl/: context-sdl2.cpp  context-sdl2.h  surface-sdl2.cpp  surface-sdl2.h
src/runtime/pal/win32/: clipboard-win32.cpp  clipboard-win32.h  config.h  fonts-win32.cpp  fonts-win32.h  im-win32.cpp  im-win32.h  installer-win32.cpp  installer-win32.h  pal-win32.cpp  pal-win32.h  pixbuf-win32.cpp  pixbuf-win32.h  threads-win32.cpp  unistd.h  window-win32.cpp  window-win32.h
src/runtime/pal/win32/events/: button-win32.h  key-win32.h  motion-win32.h  wheel-win32.h
src/runtime/pal/win32/helpers/: dialogeventhandler.cpp  dialogeventhandler.h
src/runtime/xaml/: drm.xaml  framerate-display.xaml  fullscreen.xaml  incomplete-support.xaml  jpeg.xaml
src/runtime/zip/: README  unzip.c  unzip.h
src/tools/: .gitignore  ChangeLog  Makefile.am  Options.cs  README  launcher.in  mkcolor.cs  png-to-header.cs  try-commit.sh  xaml-to-header.cs
test/: .gitignore  ChangeLog  Makefile.am  Web.config  effect-test.cpp  gendarme.ignore  gendarme.xml  index.aspx  make-xephyr  projection-test.cpp  saveMasters.py  test.mdp  xamlize.aspx
test/2.0/: .gitignore  ChangeLog  Makefile.am  README
test/MarkdownTextBlock/: Extensions.cs  ImageResolvingEventArgs.cs  LinkClickedEventArgs.cs  MarkdownRenderedEventArgs.cs  MarkdownTextBlock.cs  MarkdownTextBlock.csproj
test/cpp/: .gitignore  ChangeLog  Makefile.am  main.cpp  main.h  mms.cpp  utils.cpp
test/harness/: .gitignore  ChangeLog  Makefile.am
test/js/: ChangeLog  api-ea.html  api.html  assorted.html  errors.html  props-gen.html  props.html
test/leak/: .gitignore  App.xaml  App.xaml.cs  AppManifest.xaml  Leak.html  Makefile.am  Page.xaml  Page.xaml.cs
test/managed-parser-tests/: managed-do-subclass.html  managed-property-attribute.html  vsm.html  vsm2.html
test/media/: .gitignore  ChangeLog
test/parsertest/: .gitignore  Makefile.am  parsertest.cpp
test/sizes/: .gitignore  Makefile.am  sizes.cpp
test/supp/: audio.supp  ffmpeg.supp  firefox.supp  helgrind.supp  mono.supp  moon.supp
test/templates/: README  test-screenshot-template.html
test/xaml/: .gitignore  README  input-test.html  nested-canvas-empty.xaml  slow-startup.xaml  test-45-bounding-box.xaml  test-animated-brush-matrix-transform.xaml  test-animated-brush-relativetransform.xaml  test-animation-beginstoryboard-empty.xaml  test-animation-begintimes.xaml  test-animation-ellipse-stroke.xaml  test-animation-ellipse.xaml  test-animation-hold-stop-speed.xaml  test-animation-invalid-keyframe-keytime.xaml  test-animation-line-bounds.xaml  test-animation-line.xaml  test-animation-nested-storyboard.xaml  test-animation-null-defaults-color.xaml  test-animation-null-defaults-double.xaml  test-animation-null-keyframe-2.0.xaml  test-animation-null-keyframe.xaml  test-animation-only-from.xaml  test-animation-path-smoothbezier-stroke.xaml  test-animation-polygon-bounds.xaml  test-animation-polyline-bounds.xaml  test-animation-repeat-behavior.xaml  test-animation-slow-keyspline.xaml  test-animation-text.xaml  test-animation-zero-duration.xaml  test-animation-zero-repeat-behavior.xaml  test-blending-gradients.xaml  (+236 more)
(+2501 files in other folders)
